@@ -1,3 +1,6 @@
+31-Dec-2020 - MDD - Version 3.6.0
+    - Implementation of a significantly upgraded CTE correction as defined/derived by J. Anderson.
+
 12-Aug-2020 - MDD - Version 3.5.2
     - Added MJD as a parameterized variable for the PHOTMODE keyword to
       enable a time-dependent photometric correction for the UVIS only.
@@ -8,7 +11,7 @@
     - Replaced/modified routines based upon copyright numerical recipes routines.
       Updates implemented Oct 2019, but installation delayed for higher priority updates.
 
-14-Oct-2018 - JAN/MDD - Version 3.5.0 
+14-Oct-2018 - JAN/MDD - Version 3.5.0
     - Bug fixes to the CTE correction to fix out of bounds memory access and remove unnecessary critical section.
 
 19-Jan-2018 - JAN/MDD - Version 3.4.2
