@@ -1,3 +1,6 @@
+Updates for Version 3.6.0 31-Dec-2020 - MDD
+    - Implementation of a significantly upgraded CTE correction as defined/derived by J. Anderson.
+
 Updates for Version 3.5.2 12-Aug-2020 - MDD
     - Added MJD as a parameterized variable for the PHOTMODE keyword to
       enable a time-dependent photometric correction for the UVIS only.
